Remove all Spring dependencies for version-neutral library
- Replace Spring RestClient with Java 11+ HttpClient (GitHubHttpClient)
- Add GitHubCollectorBuilder for service wiring without Spring DI
- Replace Spring Boot CLI app with plain Java main (GitHubCollectorCli)
- Remove @Service, @Component, @Configuration annotations
- Remove Spring test dependencies, update to pure JUnit 5 + Mockito
- Target Java 17 for broad compatibility
- Update Mockito to 5.11.0 for JDK 17+ support

This makes the library usable without Spring version conflicts,
particularly during Spring Boot 3->4 and Framework 6->7 transitions.

--- a/github-collector-cli/pom.xml
+++ b/github-collector-cli/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <name>GitHub Collector CLI</name>
-    <description>Command-line application for GitHub collection</description>
+    <description>Command-line application for GitHub collection - no Spring dependencies</description>
 
     <dependencies>
         <!-- Internal Library Dependency -->
@@ -24,20 +24,17 @@
             <artifactId>github-collector-core</artifactId>
         </dependency>
 
-        <!-- Spring Boot -->
+        <!-- Logging implementation for CLI -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
         </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -59,42 +56,54 @@
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
 
-            <!-- Spring Boot Plugin for Uber JAR -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>org.springaicommunity.github.collector.cli.GitHubCollectorApp</mainClass>
-                    <executable>true</executable>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.springframework.boot</groupId>
-                            <artifactId>spring-boot-configuration-processor</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Maven JAR Plugin -->
+            <!-- Maven JAR Plugin with Main-Class manifest -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.springaicommunity.github.collector.cli.GitHubCollectorApp</mainClass>
+                            <mainClass>org.springaicommunity.github.collector.cli.GitHubCollectorCli</mainClass>
                             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                             <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                            <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+
+            <!-- Maven Shade Plugin for uber-jar -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.5.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.springaicommunity.github.collector.cli.GitHubCollectorCli</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
