Refactor architecture with interfaces, decorators, and builder pattern
Architecture improvements:
- Extract interfaces: GitHubClient, GraphQLService, RestService,
  CollectionStateRepository, ArchiveService, BatchStrategy
- Add decorator: RetryingGitHubClient with builder pattern
- Add implementations: FileSystemStateRepository, ZipArchiveService,
  FixedBatchStrategy, AdaptiveBatchStrategy
- Move logging from separate decorator into GitHubHttpClient
- Add ArchUnit tests for architectural rules enforcement

Test coverage improvements:
- Add comprehensive tests for all new components
- Add PRCollectionServiceTest with 32 tests
- Add data model tests for PullRequest and Review records
- Add GitHubRestService PR-related tests
- Overall coverage: 75.7%

CI/CD:
- Add GitHub Actions workflows using spring-ai-community common workflows
- ci.yml, publish-snapshot.yml, release.yml

Build:
- Enforce Java 17 via maven-enforcer-plugin (Mockito compatibility)

--- a/github-collector-core/pom.xml
+++ b/github-collector-core/pom.xml
@@ -62,6 +62,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.tngtech.archunit</groupId>
+            <artifactId>archunit-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.4.14</version>
@@ -92,6 +97,12 @@
                         </manifest>
                     </archive>
                 </configuration>
+            </plugin>
+
+            <!-- JaCoCo code coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
