--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,10 @@
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <mockito.version>5.11.0</mockito.version>
         <assertj.version>3.24.2</assertj.version>
+        <archunit.version>1.4.1</archunit.version>
+
+        <!-- Code coverage -->
+        <jacoco.version>0.8.11</jacoco.version>
     </properties>
 
     <dependencyManagement>
@@ -153,6 +157,12 @@
                 <version>${assertj.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit-junit5</artifactId>
+                <version>${archunit.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -160,6 +170,28 @@
         <!-- Most plugin configuration inherited from community-parent -->
         <pluginManagement>
             <plugins>
+                <!-- Enforce Java 17 - Mockito has compatibility issues with Java 21 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.4.1</version>
+                    <executions>
+                        <execution>
+                            <id>enforce-java-version</id>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                            <configuration>
+                                <rules>
+                                    <requireJavaVersion>
+                                        <version>[17,18)</version>
+                                        <message>Java 17 is required. Mockito has compatibility issues with Java 21.</message>
+                                    </requireJavaVersion>
+                                </rules>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
                 <!-- Override surefire with environment variables for GitHub token -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -183,10 +215,35 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!-- JaCoCo code coverage -->
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                    <executions>
+                        <execution>
+                            <id>prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>report</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
