Add JSpecify null-safety annotations

--- a/github-collector-core/pom.xml
+++ b/github-collector-core/pom.xml
@@ -18,10 +18,11 @@
     <description>Core library for GitHub Issues and PR collection - no Spring dependencies</description>
 
     <dependencies>
-        <!-- GitHub API -->
+        <!-- JSpecify null-safety annotations -->
         <dependency>
-            <groupId>org.kohsuke</groupId>
-            <artifactId>github-api</artifactId>
+            <groupId>org.jspecify</groupId>
+            <artifactId>jspecify</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- Jackson for JSON processing -->
@@ -103,6 +104,25 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- OWASP Dependency-Check for vulnerability scanning -->
+            <plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>12.1.0</version>
+                <configuration>
+                    <failBuildOnCVSS>7.0</failBuildOnCVSS>
+                    <!-- Disable OSS Index analyzer to avoid rate-limiting issues -->
+                    <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
