Add .env file support and centralize ObjectMapper configuration
- Add EnvironmentSupport class with dotenv-java for .env file loading
- Add ObjectMapperFactory to centralize Jackson ObjectMapper setup
- Update ArgumentParser to use EnvironmentSupport for GITHUB_TOKEN
- Simplify GitHubCollectorBuilder ObjectMapper creation
- Clean up test dependencies and configuration

--- a/github-collector-core/pom.xml
+++ b/github-collector-core/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
+        <!-- Dotenv for .env file support -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
