--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,9 @@
         <!-- GitHub Collector project version -->
         <github-collector.version>1.0.0-SNAPSHOT</github-collector.version>
 
+        <!-- Environment support -->
+        <dotenv.version>3.0.2</dotenv.version>
+
         <!-- JSON processing -->
         <jackson.version>2.18.5</jackson.version>
 
@@ -99,6 +102,13 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+
+            <!-- Dotenv for .env file support -->
+            <dependency>
+                <groupId>io.github.cdimascio</groupId>
+                <artifactId>dotenv-java</artifactId>
+                <version>${dotenv.version}</version>
             </dependency>
 
             <!-- Slf4j API -->
@@ -182,15 +192,15 @@
                         </execution>
                     </executions>
                 </plugin>
-                <!-- Override surefire with environment variables for GitHub token -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <environmentVariables>
-                            <GITHUB_TOKEN>${env.GITHUB_TOKEN}</GITHUB_TOKEN>
-                        </environmentVariables>
-                    </configuration>
+                </plugin>
+                <!-- Failsafe for integration tests -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${maven-surefire-plugin.version}</version>
                 </plugin>
                 <!-- Override to auto-apply formatting instead of just validating -->
                 <plugin>
