--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish:
     uses: spring-ai-community/community-workflows/.github/workflows/publish-snapshot.yml@main
+    with:
+      skip-tests: true
     secrets:
       MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
       MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
