--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -10,6 +10,7 @@ jobs:
     uses: spring-ai-community/community-workflows/.github/workflows/publish-snapshot.yml@main
     with:
       skip-tests: true
+      verify-first: false
     secrets:
       MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
       MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
